# pyweblogalyzer

./: .gitignore  Dockerfile  README.md  setup.cfg  tox.ini  ts.csv
docs/sphinx_conf/: conf.py  index.rst
docs/sphinx_conf/source/: modules.rst  pyweblogalyzer.rst
etc/config/: config.py
etc/config/log_enrichers/: enricher_example.py
src/pyweblogalyzer/: __init__.py  cli.py  config.py
src/pyweblogalyzer/collector/: app.py  enrichers.py
src/pyweblogalyzer/dashboard/: app.py
src/pyweblogalyzer/dashboard/static/css/: dashboard.css  datatables.min.css
src/pyweblogalyzer/dashboard/static/js/: dashboard.js  datatables.min.js
src/pyweblogalyzer/dashboard/templates/: index.html  modal.html
src/pyweblogalyzer/dataset/: weblog.py  weblogdata.py
test/: test_cli.py
